--- a/src/components/PixelCanvas/PixelCanvas.css
+++ b/src/components/PixelCanvas/PixelCanvas.css
@@ -1,18 +1,18 @@
 .canvas{
-    /* border: 1px solid white; */
-    width: 80px;
-    height: 80px;
-    /* background-color: red; */
+    border: 1px solid white;
+    /* width: 100px; */
+    /* height: 100px; */
+    /* background-color: rgba(255, 0, 0, 0.11); */
     padding: 0;
     display: flex;
     flex-wrap: wrap;
 }
 
 .pixel{
-    width: 20px;
-    height: 20px;
+    /* width: 20px;
+    height: 20px; */
     box-sizing: border-box;
-    border: solid 1px rgba(252, 252, 252, 0.062);
+    /* border: solid 1px rgba(252, 252, 252, 0.062); */
 }
 .pixel:hover{
     background-color: rgba(255, 255, 255, 0.288);
