--- a/src/components/PixelCanvas/PixelCanvas.css
+++ b/src/components/PixelCanvas/PixelCanvas.css
@@ -6,14 +6,16 @@
     padding: 0;
     display: flex;
     flex-wrap: wrap;
+    cursor:none;
 }
 
-.pixel{
+/* .pixel{ */
     /* width: 20px;
     height: 20px; */
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     /* border: solid 1px rgba(252, 252, 252, 0.062); */
-}
+/* } */
 .pixel:hover{
-    background-color: rgba(255, 255, 255, 0.288);
+    background-color: white;
+    filter: invert();
 }
