--- a/src/components/PixelCanvas/PixelCanvas.css
+++ b/src/components/PixelCanvas/PixelCanvas.css
@@ -9,12 +9,12 @@
     cursor:none;
 }
 
-/* .pixel{ */
+.pixel{
     /* width: 20px;
     height: 20px; */
-    /* box-sizing: border-box; */
-    /* border: solid 1px rgba(252, 252, 252, 0.062); */
-/* } */
+    box-sizing: border-box;
+    border: solid 1px rgba(128, 128, 128, 0.137);
+}
 .pixel:hover{
     background-color: white;
     filter: invert();
