--- a/src/components/PixelCanvas/PixelCanvas.css
+++ b/src/components/PixelCanvas/PixelCanvas.css
@@ -6,7 +6,7 @@
     padding: 0;
     display: flex;
     flex-wrap: wrap;
-    cursor:none;
+    cursor: none;
 }
 
 .pixel{
@@ -16,6 +16,10 @@
     border: solid 1px rgba(128, 128, 128, 0.137);
 }
 .pixel:hover{
-    background-color: white;
-    filter: invert();
+    background-color: rgba(1, 1, 1, 1);
+    box-shadow: 0 0 4px black;
+    opacity: 1;
+    filter: invert() brightness(10);
+    border: solid 1px rgba(128, 128, 128, 1);
+
 }
