--- a/src/components/Colors/Colors.css
+++ b/src/components/Colors/Colors.css
@@ -5,6 +5,7 @@
     border: solid 2px rgb(173, 173, 173);
     box-shadow: 3px 3px 10px black;
     width: 420px;
+    padding: 20px;
 }
 .color-columnsTop,.color-columnsBottom{
     display: flex;
@@ -24,7 +25,64 @@
     box-shadow: 0 0 3px black inset;
 }
 
-.sliderContainer{
-    width: 255px;
+
+
+.slidersContainer{
+    display: flex;
+    flex-direction: column;
+    /* height: 420px; */
+    justify-content: space-evenly;
+    /* width: 255px; */
+    /* height: 300px; */
+    /* background-color: red; */
+}
+.nameThisBetter{
+    display: flex;
+}
+.leftMarker{
+    width: 1px;
+    height: 100%;
     background-color: red;
+}
+
+.slider{
+    width: 255px;
+    height: 20px;
+    position: relative;
+    background-color: rgba(74, 119, 74, 0.418);
+}
+.theColorContainer{
+    width: 100px;
+    height: 100px;
+    /* border: solid 1px white; */
+    position: relative;
+}
+
+.theColor{
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    /* border: solid 1px rgb(68, 212, 24); */
+    z-index: 10;
+
+}
+.theColorBackImg{
+    width: 100px;
+    height: 100px;
+    /* border: solid 1px rgba(219, 45, 45, 0.425); */
+    position: absolute;
+    z-index: 0;
+    background-size: contain;
+}
+
+.knob{
+    height: 20px;
+    width: 15px;
+    background-color: blueviolet;
+    cursor:grab;
+    position: absolute;
+}
+.knob:active{
+    cursor: grabbing;
+
 }
