--- a/src/components/Colors/Colors.css
+++ b/src/components/Colors/Colors.css
@@ -30,26 +30,27 @@
 .slidersContainer{
     display: flex;
     flex-direction: column;
-    /* height: 420px; */
-    justify-content: space-evenly;
-    /* width: 255px; */
-    /* height: 300px; */
-    /* background-color: red; */
+    border-top: 5px solid rgb(41, 41, 41);
+    background-size: 15%;
 }
+
 .nameThisBetter{
     display: flex;
 }
+
 .leftMarker{
     width: 1px;
     height: 100%;
-    background-color: red;
+    /* background-color: red; */
 }
 
 .slider{
     width: 255px;
     height: 20px;
+    /* border-top: 3px solid black; */
+    border-bottom: 5px solid rgb(41, 41, 41);
     position: relative;
-    background-color: rgba(74, 119, 74, 0.418);
+    /* background-color: rgba(74, 119, 74, 0.418); */
 }
 .theColorContainer{
     width: 100px;
@@ -78,11 +79,27 @@
 .knob{
     height: 20px;
     width: 15px;
-    background-color: blueviolet;
-    cursor:grab;
+    /* background-color: blueviolet; */
+    cursor:move;
     position: absolute;
+    border: solid 1px grey;
+    box-sizing: border-box;
+    box-shadow: 0 0 3px black inset;
+    border-radius: 3px;
 }
 .knob:active{
     cursor: grabbing;
+}
 
+.Red{
+    background-color: rgb(255, 0, 0);
+}
+.Green{
+    background-color: rgb(0, 255, 0);
+}
+.Blue{
+    background-color: rgb(0, 0, 255);
+}
+.Alpha{
+    background-size: cover;
 }
