--- a/src/components/Colors/Colors.css
+++ b/src/components/Colors/Colors.css
@@ -39,13 +39,13 @@
 }
 
 .leftMarker{
-    width: 1px;
+    width: 0px;
     height: 100%;
     /* background-color: red; */
 }
 
 .slider{
-    width: 255px;
+    width: 265px;
     height: 20px;
     /* border-top: 3px solid black; */
     border-bottom: 5px solid rgb(41, 41, 41);
@@ -101,5 +101,5 @@
     background-color: rgb(0, 0, 255);
 }
 .Alpha{
-    background-size: cover;
+    background-size: 300%;
 }
