--- a/src/components/PixelCanvas/PixelCanvas.css
+++ b/src/components/PixelCanvas/PixelCanvas.css
@@ -42,5 +42,20 @@
 
     position: absolute;
     pointer-events: none;
-
+}
+.NW{
+    border-left: solid 1px rgb(255, 255, 255);
+    border-top: solid 1px rgb(255, 255, 255);
+}
+.NE{
+    border-right: solid 1px rgb(255, 255, 255);
+    border-top: solid 1px rgb(255, 255, 255);
+}
+.SW{
+    border-left: solid 1px rgb(255, 255, 255);
+    border-bottom: solid 1px rgb(255, 255, 255);
+}
+.SE{
+    border-bottom: solid 1px rgb(255, 255, 255);
+    border-right: solid 1px rgb(255, 255, 255);
 }
