--- a/src/components/PixelCanvas/PixelCanvas.css
+++ b/src/components/PixelCanvas/PixelCanvas.css
@@ -68,5 +68,7 @@
 .SE{
     border-bottom: solid 1px rgb(255, 255, 255);
     border-right: solid 1px rgb(255, 255, 255);
+    box-shadow: -3px -3px 4px -3px black inset;
+
     box-sizing: border-box;
 }
