--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,27 @@
 body{
     background-color: rgb(41, 41, 41);
+    font-family: 'Press Start 2P', cursive;
+    padding: 0;
+    margin: 0;
 }
 
 .wrapper{
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     transition: all 1s linear;
     padding: 0;
     border: none;
     background: none;
     outline: none;
 
+}
+.Tools{
+    display: flex;
+    padding: 10px;
+    background-color: rgb(77, 70, 167);
+    border-top: solid 3px white;
+    border-bottom: solid 3px rgb(184, 184, 184);
+    margin-bottom: 10px;
 }
