--- a/src/components/Colors/Colors.css
+++ b/src/components/Colors/Colors.css
@@ -2,10 +2,15 @@
     display: flex;
     /* flex-direction: column; */
     justify-content: space-evenly;
-    border: solid 2px rgb(173, 173, 173);
-    box-shadow: 3px 3px 10px black;
+    border-top: 3px solid white;
+    border-left: 3px solid rgb(196, 196, 196);
+    border-right: 3px solid rgb(97, 97, 97);
+    border-bottom: 3px solid rgb(0, 0, 0);
+    /* box-shadow: 3px 3px 10px black; */
     width: 420px;
+    height: 105px;
     padding: 20px;
+    background-color: rgb(41, 41, 41);
 }
 .color-columnsTop,.color-columnsBottom{
     display: flex;
@@ -32,6 +37,7 @@
     flex-direction: column;
     border-top: 5px solid rgb(41, 41, 41);
     background-size: 15%;
+    margin-right: 10px;
 }
 
 .IneedToWorkOnMyNamingConventions{
