squashed a few bugs. I think it's stable

--- a/src/components/PixelCanvas/PixelCanvas.css
+++ b/src/components/PixelCanvas/PixelCanvas.css
@@ -1,5 +1,9 @@
 .canvas{
-    border: 1px solid white;
+    border-top: 3px solid white;
+    border-left: 3px solid rgb(179, 179, 179);
+    border-right: 3px solid rgb(94, 94, 94);
+    border-bottom: 5px solid rgb(7, 7, 7);
+
     padding: 0;
     display: flex;
     flex-wrap: wrap;
