--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,13 +1,45 @@
 .navbarWrapper{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     color: white;
     background-color: black;
     width: 100%;
-    height: 30px;
+    height: 40px;
 }
 
 .navbarWrapper > a{
     color: white;
+}
+
+.menuBtn{
+    cursor: pointer;
+    size: 40px;
+}
+
+.logout{
+    cursor: pointer;
+    height: 20px;
+}
+
+.logout:hover{
+  color: black;
+  background-color: white;
+}
+
+.profile-dropdown{
+    top: 40px;
+    right: 30px;
+    position: absolute;
+    background-color: black;
+    padding: 15px;
+}
+
+.dropdownElement{
+    margin-top: 10px;
+}
+
+.navElement{
+    margin-left: 30px;
+    margin-right: 30px;
 }
