--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,3 +25,42 @@ body{
     border-bottom: solid 3px rgb(184, 184, 184);
     margin-bottom: 10px;
 }
+
+.form{
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    width: 400px;
+    border-top: 5px solid white;
+    border-left: 5px solid rgb(179, 179, 179);
+    border-right: 8px solid rgb(94, 94, 94);
+    border-bottom: 11px solid rgb(7, 7, 7);
+    background-color: grey;
+}
+.formElement{
+    margin: 10px;
+    font-family: 'Press Start 2P';
+}
+.formButton{
+    background-color: grey;
+    border-top: 3px solid white;
+    border-left: 3px solid rgb(179, 179, 179);
+    border-right: 5px solid rgb(94, 94, 94);
+    border-bottom: 5px solid rgb(7, 7, 7);
+    padding: 15px;
+}
+.formContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90vh;
+}
+.formInput{
+    border-top: 3px solid white;
+    border-left: 3px solid rgb(179, 179, 179);
+    border-right: 5px solid rgb(94, 94, 94);
+    border-bottom: 5px solid rgb(7, 7, 7);
+    background-color: rgb(199, 199, 199);
+    height: 30px;
+}
