--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,5 +1,43 @@
 .canvasPreview{
-    width: 600px;
+    width: 720px;
+    height: 420px;
     display: flex;
     flex-wrap: wrap;
+    overflow: hidden;
+    border-top: 5px solid white;
+    border-left: 5px solid rgb(179, 179, 179);
+    border-right: 8px solid rgb(94, 94, 94);
+    border-bottom: 11px solid rgb(7, 7, 7);
+    /* position: relative; */
+}
+.homePageWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;;
+    /* background-color: red; */
+}
+
+.homePixels{
+/* position: relative; */
+/* bottom: -400px; */
+transition: all 0.05s linear;
+width: 12px;
+height: 12px;
+/* background-color: rgba(0, 0, 0, 0) */
+}
+
+.homePixelsFadeIn{
+    /* bottom: 0; */
+    /* width: 10px; */
+    /* height: 10px; */
+}
+.drawingTitleAndName{
+    color: white;
+    margin-bottom: 20px;
+    text-shadow: 5px 5px 0 black;
+    font-size: 16px;
+}
+.justTitle{
+    font-size: 28px;
 }
