--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -3,9 +3,11 @@
     justify-content: space-between;
     align-items: center;
     color: white;
-    background-color: black;
+    background-color: rgb(48, 48, 48);
     width: 100%;
-    height: 40px;
+    height: 60px;
+    border-bottom: 3px solid rgb(128, 128, 128);
+    box-shadow: 0 5px 0 black
 }
 
 .navbarWrapper > a{
@@ -28,7 +30,7 @@
 }
 
 .profile-dropdown{
-    top: 40px;
+    top: 65px;
     right: 30px;
     position: absolute;
     background-color: black;
@@ -42,4 +44,8 @@
 .navElement{
     margin-left: 30px;
     margin-right: 30px;
+}
+.logo{
+    font-size: 39px;
+    text-shadow: 5px 5px 0 black;
 }
