--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,10 +6,11 @@ body{
 }
 
 .wrapper{
-    height: 100vh;
+    height: 85vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
     transition: all 1s linear;
     padding: 0;
     border: none;
