--- a/frontend/src/components/PixelCanvas/PixelCanvas.css
+++ b/frontend/src/components/PixelCanvas/PixelCanvas.css
@@ -1,3 +1,12 @@
+.canvasWrapper{
+    /* display: flex; */
+    /* justify-content: center;
+    align-items: center;
+    width: 100vw; */
+    overflow-y: auto;
+    overflow-x: auto;
+}
+
 .canvas{
     border-top: 5px solid white;
     border-left: 5px solid rgb(179, 179, 179);
