--- a/frontend/src/components/Colors/Colors.css
+++ b/frontend/src/components/Colors/Colors.css
@@ -1,5 +1,14 @@
 .colorsContainer{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(77, 70, 167);
+    padding: 5px;
+    border-top: solid 3px rgb(184, 184, 184);
+}
+
+.sliderSelectedColorContainer{
+    display: flex;
     /* flex-direction: column; */
     justify-content: space-evenly;
     border-top: 3px solid white;
@@ -125,3 +134,54 @@
 /* .knob.Alpha{
     backg
 } */
+
+.colorScheme{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 500px;
+    height: 100px;
+    border-top: 3px solid white;
+    border-left: 3px solid rgb(196, 196, 196);
+    border-right: 3px solid rgb(97, 97, 97);
+    border-bottom: 3px solid rgb(0, 0, 0);
+}
+
+.coloreSchemeColor{
+    /* width: 70px;
+    height: 50px; */
+    border-top: 2px solid white;
+    border-left: 2px solid rgb(196, 196, 196);
+    border-right: 2px solid rgb(97, 97, 97);
+    border-bottom: 2px solid rgb(0, 0, 0);
+    /* margin-left: 8px;
+    margin-right: 8px; */
+    flex-basis: 10%;
+    box-sizing: border-box;
+    height: 50%;
+}
+.coloreSchemeColor:hover{
+    border: 3px solid rgb(255, 255, 255);
+    box-shadow: 0 0 6px black inset;
+}
+
+
+.schemeSelector{
+    width: 250px;
+    height: 100%;
+    background-color: rgb(124, 124, 124);
+    overflow: auto;
+    border-top: 2px solid white;
+    border-left: 2px solid rgb(196, 196, 196);
+    border-right: 2px solid rgb(97, 97, 97);
+    border-bottom: 2px solid rgb(0, 0, 0);
+}
+.selectItem{
+    padding: 5px;
+    cursor: pointer;
+}
+.selectItem:hover, .selectItemActive{
+    background-color: rgb(0, 0, 0);
+    color: white;
+}
