worked on hiding the toolbars

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,8 +20,8 @@ body{
 
 .wrapper{
     display: grid;
-    grid-template-rows: 100px 1fr 145px;
-    height: 97vh;
+    /* grid-template-rows: 100px 1fr 158px; */
+    height: 99vh;
 }
 
 
