--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -74,3 +74,42 @@ body{
     background-color: rgb(199, 199, 199);
     height: 30px;
 }
+
+
+.showHideButton{
+    background-color: rgb(124, 124, 124);
+    border-top: 2px solid white;
+    border-left: 2px solid rgb(196, 196, 196);
+    border-right: 2px solid rgb(97, 97, 97);
+    border-bottom: 2px solid rgb(0, 0, 0);
+    cursor: pointer;
+    /* padding-left: 40px;
+    padding-right: 40px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.showHideButton:hover{
+    background-color: rgb(165, 165, 165);
+}
+
+.showHideButton:active{
+    background-color: rgb(63, 63, 63);
+    border-bottom: 2px solid white;
+    border-right: 2px solid rgb(196, 196, 196);
+    border-left: 2px solid rgb(97, 97, 97);
+    border-top: 2px solid rgb(0, 0, 0);
+}
+
+.saveFormContainer{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.8);
+}
