--- a/frontend/src/components/Tools/Tools.css
+++ b/frontend/src/components/Tools/Tools.css
@@ -4,7 +4,7 @@
     background-color: rgb(77, 70, 167);
     border-top: solid 3px white;
     border-bottom: solid 3px rgb(184, 184, 184);
-    height: 100px;
+    /* height: 100px; */
     /* margin-bottom: 10px; */
 }
 
@@ -20,7 +20,7 @@
     padding: 20px;
     color: white;
     position: absolute;
-    top: 100px;
+    /* top: 107px; */
     z-index: 900;
 }
 
