--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -109,7 +109,7 @@ body{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     z-index: 100;
     background-color: rgba(0, 0, 0, 0.8);
 }
