--- a/frontend/src/components/Tools/Tools.css
+++ b/frontend/src/components/Tools/Tools.css
@@ -74,7 +74,7 @@ background-color: grey;
     justify-content: space-evenly;
     align-items: center;
     margin-bottom: 5px;
-    flex-basis: 15%;
+    /* flex-basis: 12%; */
 }
 .tooldiv:hover{
     background-color: rgb(51, 51, 51);
