--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -65,3 +65,12 @@ height: 5px;
     align-items: center;
     margin: 30px
 }
+.pageTitle{
+    margin-top: 30px;
+    font-size: 25px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    color: white;
+    text-shadow: 5px 5px 0 black;
+}
