--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -5,14 +5,14 @@
     color: white;
     background-color: rgb(48, 48, 48);
     width: 100%;
-    height: 60px;
+    height: 70px;
     border-bottom: 3px solid rgb(128, 128, 128);
     box-shadow: 0 5px 0 black
 }
 
-.navbarWrapper > a{
+/* .navbarWrapper > a{
     color: white;
-}
+} */
 
 .menuBtn{
     cursor: pointer;
@@ -46,6 +46,32 @@
     margin-right: 30px;
 }
 .logo{
-    font-size: 39px;
+    font-size: 45px;
     text-shadow: 5px 5px 0 black;
+    color: white
+}
+.homeBtnContainer{
+    display: flex;
+    align-items: center;
+}
+
+.homeBtn{
+    background-color: grey;
+    border-top: 3px solid white;
+    border-left: 3px solid rgb(179, 179, 179);
+    border-right: 5px solid rgb(94, 94, 94);
+    border-bottom: 5px solid rgb(7, 7, 7);
+    padding: 15px;
+    color: black;
+    text-decoration: none;
+}
+.homeBtn:hover{
+    background-color: rgb(158, 158, 158);
+}
+.homeBtn:active{
+    border-bottom: 3px solid white;
+    border-right: 3px solid rgb(179, 179, 179);
+    border-left: 5px solid rgb(94, 94, 94);
+    border-top: 5px solid rgb(7, 7, 7);
+    background-color: rgb(80, 80, 80);
 }
