--- a/frontend/src/components/PixelCanvas/PixelCanvas.css
+++ b/frontend/src/components/PixelCanvas/PixelCanvas.css
@@ -22,6 +22,22 @@
 
 }
 
+/* .choose{
+    position: relative;
+    top: -56px;
+    left: 13px;
+    font-size: 10px;
+    background-color: rgb(124, 124, 124);
+    width: 97px;
+    height: 41px;
+    display: flex;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+
+    pointer-events: none;
+} */
+
 .pixel{
     box-sizing: border-box;
     /* border: solid 1px rgba(128, 128, 128, 0.137); */
