fixed more bugs and refined some features

--- a/frontend/src/components/Colors/Colors.css
+++ b/frontend/src/components/Colors/Colors.css
@@ -72,6 +72,17 @@
     font-family: 'Turret Road',  Verdana, Geneva, Tahoma, sans-serif;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
+
 .slider{
     width: 270px;
     height: 20px;
