--- a/frontend/src/components/MineSweeper/MineSweeper.css
+++ b/frontend/src/components/MineSweeper/MineSweeper.css
@@ -6,11 +6,11 @@
     width: 30px;
     height: 30px;
     box-sizing: border-box;
-    background-color: grey;
-    border-top: 2px solid rgb(226, 226, 226);
-    border-left: 2px solid rgb(153, 153, 153);
-    border-right: 2px solid rgb(100, 100, 100);
-    border-bottom: 2px solid rgb(48, 48, 48);
+    background-color: rgb(165, 165, 165);
+    border-top: 3px solid rgba(226, 226, 226, 0.4);
+    border-left: 3px solid rgba(153, 153, 153, 0.4);
+    border-right: 3px solid rgba(100, 100, 100, 0.4);
+    border-bottom: 3px solid rgba(48, 48, 48, 0.4);
     cursor: pointer;
     font-size: 10px;
     display: flex;
@@ -23,7 +23,7 @@
 }
 
 .msHidden{
-    opacity: 0.1;
+    opacity: 0;
 }
 .msSquareValue{
     width: 100%;
@@ -37,12 +37,18 @@
 .msEmptySquare{
     color: rgba(0, 0, 0, 0);
     background-color: rgb(82, 82, 82);
-    border-bottom: 1px solid rgb(226, 226, 226);
-    border-right: 1px solid rgb(153, 153, 153);
-    border-left: 1px solid rgb(100, 100, 100);
-    border-top: 1px solid rgb(48, 48, 48);
+    border-bottom: 1px solid rgb(120, 120, 120);
+    border-right: 1px solid rgb(90, 90, 90);
+    border-left: 1px solid rgb(70, 70, 70);
+    border-top: 1px solid rgb(50, 50, 50);
 }
-.red{
+.bomb{
     color: lime;
-    opacity: 0.1;
+    opacity: 0.4;
+}
+
+
+.msFlag{
+    position: absolute;
+    pointer-events: none;
 }
