--- a/frontend/src/components/MineSweeper/MineSweeper.css
+++ b/frontend/src/components/MineSweeper/MineSweeper.css
@@ -1,10 +1,11 @@
 .msRow{
     display: flex;
+
 }
 
 .msSquare{
     box-sizing: border-box;
-    background-color: rgb(165, 165, 165);
+    background-color: rgb(0, 0, 255);
     border-top: 3px solid rgba(226, 226, 226, 0.4);
     border-left: 3px solid rgba(153, 153, 153, 0.4);
     border-right: 3px solid rgba(100, 100, 100, 0.4);
@@ -14,12 +15,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* font-family: 'Geostar', cursive; */
+    position: relative;
+
+    font-family: Helvetica, Arial, sans-serif;
 }
 
-.msSquare:hover{
+/* .msSquare:hover{
     box-shadow: 0 0 3px black inset;
-}
+} */
 
 .msHidden{
     opacity: 0;
@@ -31,23 +34,88 @@
     justify-content: center;
     align-items: center;
     pointer-events: none;
+    /* transition: all 0.5s linear; */
+
 }
 
 .msEmptySquare{
     color: rgba(0, 0, 0, 0);
-    background-color: rgb(82, 82, 82);
-    border-bottom: 1px solid rgb(120, 120, 120);
-    border-right: 1px solid rgb(90, 90, 90);
-    border-left: 1px solid rgb(70, 70, 70);
-    border-top: 1px solid rgb(50, 50, 50);
+    background-color: rgb(18, 19, 78);
+    border-bottom: 1px solid rgb(59, 40, 228);
+    border-right: 1px solid rgb(48, 29, 155);
+    border-left: 1px solid rgb(13, 15, 87);
+    border-top: 1px solid rgb(0, 0, 0);
+    /* transition: all 0.4s linear; */
+
 }
 .bomb{
     color: lime;
     opacity: 0;
 }
 
+.clockwise{
+    animation:clockwise 14s linear infinite;
+}
 
 .msFlag{
     position: absolute;
     pointer-events: none;
+    width: 20px;
 }
+.explode{
+    /* display: none; */
+    pointer-events: none;
+    position: absolute;
+    background-color: rgba(231, 15, 202, 0.418);
+    width: 30px;
+    height: 30px;
+}
+.shrapnel{
+    width: 6px;
+    height: 6px;
+    background-color: rgba(0, 0, 255, 0.432);
+}
+.kaboom{
+    position: absolute;
+    /* top: -65px; */
+    z-index: 955;
+}
+
+#noContext{
+    position: relative;
+    /* transition: all 0.1s linear; */
+    animation-name: colorChange;
+    animation-duration: 77s;
+    animation-iteration-count:infinite;
+    animation-timing-function: linear;
+    z-index: 0;
+
+}
+
+.white{
+    background-color: white;
+    box-shadow: 0 0 25px white;
+    z-index: 999;
+}
+
+.stats{
+    display: flex;
+    justify-content: space-between;
+    color: #999900;
+    /* margin: 0 50px; */
+    width: 900px;
+    background-color: black;
+    padding: 10px;
+}
+.statNums{
+    color: white;
+}
+
+@keyframes colorChange {
+    0%   {filter: hue-rotate(0deg);}
+    100%   {filter: hue-rotate(360deg);}
+  }
+
+  @keyframes clockwise { 100% {
+    transform:rotate(360deg);
+}}
