--- a/frontend/src/components/MineSweeper/MineSweeper.css
+++ b/frontend/src/components/MineSweeper/MineSweeper.css
@@ -6,10 +6,6 @@
 .msSquare{
     box-sizing: border-box;
     background-color: rgb(0, 0, 255);
-    border-top: 3px solid rgba(226, 226, 226, 0.4);
-    border-left: 3px solid rgba(153, 153, 153, 0.4);
-    border-right: 3px solid rgba(100, 100, 100, 0.4);
-    border-bottom: 3px solid rgba(48, 48, 48, 0.4);
     cursor: pointer;
     font-size: 12px;
     display: flex;
@@ -17,6 +13,10 @@
     align-items: center;
     position: relative;
 
+    border-top: 3px solid rgba(226, 226, 226, 0.4);
+    border-left: 3px solid rgba(153, 153, 153, 0.4);
+    border-right: 3px solid rgba(100, 100, 100, 0.4);
+    border-bottom: 3px solid rgba(48, 48, 48, 0.4);
     font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -46,8 +46,27 @@
     border-left: 1px solid rgb(13, 15, 87);
     border-top: 1px solid rgb(0, 0, 0);
     /* transition: all 0.4s linear; */
-
 }
+
+.bombed{
+    /* color: rgba(0, 0, 0, 0); */
+    box-sizing: border-box;
+    background-color: rgb(19, 2, 119);
+    cursor: pointer;
+    font-size: 12px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    border-bottom: 1px solid rgb(59, 40, 228);
+    border-right: 1px solid rgb(48, 29, 155);
+    border-left: 1px solid rgb(13, 15, 87);
+    border-top: 1px solid rgb(0, 0, 0);
+    /* transition: all 0.4s linear; */
+}
+
+
 .bomb{
     color: lime;
     opacity: 0;
@@ -62,19 +81,8 @@
     pointer-events: none;
     width: 20px;
 }
-.explode{
-    /* display: none; */
-    pointer-events: none;
-    position: absolute;
-    background-color: rgba(231, 15, 202, 0.418);
-    width: 30px;
-    height: 30px;
-}
-.shrapnel{
-    width: 6px;
-    height: 6px;
-    background-color: rgba(0, 0, 255, 0.432);
-}
+
+
 .kaboom{
     position: absolute;
     /* top: -65px; */
