--- a/frontend/src/components/MineSweeper/MineSweeper.css
+++ b/frontend/src/components/MineSweeper/MineSweeper.css
@@ -179,18 +179,49 @@
 }
 
 .bombFlash{
-    filter: saturate(0) brightness(10) drop-shadow(0 0 20px #FFFFFF);
+    filter: saturate(0) brightness(30) drop-shadow(0 0 20px #FFFFFF);
     width: 90px;
     z-index: 999;
 }
+.holeSized{
+    width: 30px;
+    height: 30px;
+}
 .gameWrapper{
-    transition: all 8s ease-in-out;
+    transition: all 4s ease-in-out;
 }
 .flash{
     filter: brightness(1.3) contrast(1.3);
 }
 .endGame{
     filter: brightness(0.6) saturate(0);
+}
+
+.instructions{
+    width: 800px;
+    height: 600px;
+    background-color: rgb(49, 0, 0);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 30px;
+    font-size: 10px;
+    line-height: 25px;
+
+}
+
+.screenshot{
+    width: 213px;
+    height: 216px;
+}
+
+.instructionsTitle{
+    font-size: 25px;
+}
+.warning{
+    font-size: 20px;
 }
 
 @keyframes colorChange {
