--- a/frontend/src/components/MineSweeper/MineSweeper.css
+++ b/frontend/src/components/MineSweeper/MineSweeper.css
@@ -36,7 +36,7 @@
     /* transition: all 0.5s linear; */
 }
 
-.lvlSelect,.startGame{
+.lvlSelect,.startGame,.newGame{
     color: #000000;
     background-color: #FF6666;
     border-bottom: 3px solid rgb(59, 40, 228);
@@ -50,6 +50,13 @@
 .startGame{
     background-color: #6666FF;
 }
+.newGame{
+    background-color: white;
+}
+.newGame:hover{
+    background-color: rgb(170, 170, 170);
+}
+
 .lvlSelect:hover,.startGame:hover{
     filter: brightness(1.4);
 }
@@ -103,7 +110,7 @@
 
 .bomb{
     color: lime;
-    opacity: 0;
+    opacity: 0.7;
 }
 
 .clockwise{
@@ -217,9 +224,17 @@
     height: 216px;
 }
 
-.instructionsTitle{
-    font-size: 25px;
+.gameTitle{
+    font-size: 35px;
 }
+
+
+.instructionsTitle{
+    font-size: 20px;
+    cursor: pointer;
+    border-bottom: 2px solid white;
+}
+
 .warning{
     font-size: 20px;
 }
