I made changes. Dont ask me what those were...

--- a/frontend/src/components/MineSweeper/MineSweeper.css
+++ b/frontend/src/components/MineSweeper/MineSweeper.css
@@ -170,14 +170,18 @@
 .stats{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     color: #999900;
     /* margin: 0 50px; */
-    /* width: 900px; */
+    width: 900px;
     background-color: black;
     padding: 10px;
 }
 .statNums{
     color: white;
+}
+.time{
+    width: 300px;
 }
 .hint{
     color: white;
